--- a/styles/header/header__navbar.css
+++ b/styles/header/header__navbar.css
@@ -49,14 +49,140 @@ border-radius: 0.5rem;
 #menu-toggle:checked~.menu{
 	display: grid;
 	gap: 0.5rem;
-	align-content: center;
-	background-color: var(--color-600);
+	align-content: start;
+	background-color: var(--color-900);
 	position: absolute;
 	top: 6.5rem;
+	height: 89vh;
 	width: 100%;
 	left: 0;
 	padding: 2rem 1rem;
-	height: 89vh;
-	box-shadow: 0 0 0.5rem var(--color-500);
+	
+	box-shadow: 0 0 .5rem var(--color-500);
+
+
+}
+
+
+@media (min-width: 576px){
+	.menu{
+		all: unset;
+		display: flex;
+	}
+	.menu-btn{
+		display: none;
+	}
+}
+
+.menu__link{
+	color: var(--color-200);
+	display: block;
+	padding: 1rem;
+	border-radius: 0.5rem;
+
+}
+
+.menu__link:hover{
+	color: var(--color-main);
+	background-color: var(--color-700);
+}
+
+@media (min-width: 576px){
+	.menu__link{
+		color: var(--color-950);
+	}
+	.menu__link:hover{
+		background-color:transparent;
+	}
+}
+
+#menu-toggle:checked+.menu-btn .menu-btn__line--1{
+animation: line1 0.3s forwards;
+}
+#menu-toggle:checked+.menu-btn .menu-btn__line--2{
+animation: line2 0.3s forwards;
+}
+#menu-toggle:checked+.menu-btn .menu-btn__line--3{
+animation: line3 0.3s forwards;
+}
+
+#menu-toggle:not(:checked)+.menu-btn .menu-btn__line--1{
+animation: line1-r 0.3s forwards;
+}
+ 
+#menu-toggle:not(:checked)+.menu-btn .menu-btn__line--3{
+animation: line3-r 0.3s forwards;
+}
+
+
+
+
+@keyframes line1{
+0%{
+	transform:translateY(0) rotate(0);
+
+}
+50%{
+		transform:translateY(8px) rotate(0);
+}
+100%{
+		transform:translateY(8px) rotate(45deg);
+}
+
+}
+
+@keyframes line1-r{
+0%{
+	transform:translateY(8px) rotate(45deg);
+
+}
+50%{
+		transform:translateY(8px) rotate(0);
+}
+100%{
+		transform:translateY(0) rotate(0);
+}
+
+}
+
+
+@keyframes line2{
+0%{
+	opacity: 1;
+
+}
+50%{
+		opacity: 0.5;
+}
+100%{
+		opacity: 0;
+}
+
+}
+@keyframes line3{
+0%{
+	transform:translateY(0) rotate(0);
+
+}
+50%{
+		transform:translateY(-8px) rotate(0);
+}
+100%{
+		transform:translateY(-8px) rotate(-45deg);
+}
+
+}
+
+@keyframes line3-r{
+0%{
+	transform:translateY(-8px) rotate(-45deg);
+
+}
+50%{
+		transform:translateY(-8px) rotate(0);
+}
+100%{
+		transform:translateY(0) rotate(0);
+}
 
 }
