--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,4 @@
-@import "base.css";
+@import url(base.css);
 @import url(header/header.css);
-@import url(header/header__intro.css);
 @import url(header/header__navbar.css);
+@import url(header/header__intro.css);
