--- a/styles/main.css
+++ b/styles/main.css
@@ -2,3 +2,9 @@
 @import url(header/header.css);
 @import url(header/header__navbar.css);
 @import url(header/header__intro.css);
+@import url(overview/overview__stats.css);
+@import url(overview/overview__education.css);
+@import url(courses/courses.css);
+@import url(plans/plans.css);
+@import url(testimoniales/testimoniales.css);
+@import url(footer/footer.css);
